# zoho-workdrive-sync

./: ARCHITECTURE.md  LICENSE  README.md  pyproject.toml  setup.sh
src/workdrive_sync/: __init__.py  api.py  auth.py  config.py  conflicts.py  errors.py  main.py  state.py  sync.py  tray.py
